--- a/config/base.yaml
+++ b/config/base.yaml
@@ -1,17 +1,18 @@
 misc:
   project_name: tmp-project-name
   run_name: tmp-run-name
-  log_model: False                              # whether to have wandb save artifacts
+  log_model: False                                 # whether to have wandb save artifacts
   use_auto_scale_batch_size: False
   enable_progress_bar: False
-  enable_checkpointing: False                   # whether to save model checkpoints
+  enable_checkpointing: False                      # whether to save model checkpoints
   log_every_n_steps: 50
-  wandb_save_dir: '/vulcanscratch/psando/wandb'
-  dirpath: '/vulcanscratch/psando/poison_ckpts' # path to save checkpoints
+  wandb_save_dir: '/vulcanscratch/psando/wandb'    # path to save wandb files
+  dirpath: '/vulcanscratch/psando/poison_ckpts'    # path to save your checkpoints
 
 train:
   model_name: ResNet18
-  dataset: CIFAR10
+  dataset: CIFAR10                                 # either 'CIFAR10' 'CIFAR100' 'STL10' or 'SVHN'
+  dataset_path: '/vulcanscratch/psando/cifar-10/'  # path to your dataset root  
   batch_size: 128
   epochs: 100
   num_workers: 16
@@ -21,4 +22,4 @@ train:
   adversarial_poison_path: False
   unlearnable_poison_path: False
   dataset_path: False
-  augmentations_key: 'none'                     # either 'none' 'cutout' 'cutmix' or 'mixup' 
+  augmentations_key: 'none'  # either 'none' 'cutout' 'cutmix' or 'mixup' 
